# ladybug

./: .gitignore  CMakeLists.txt
.github/workflows/: build-and-deploy.yml  build-extensions.yml  ci-musl-test-workflow.yml  ci-workflow.yml  java-workflow.yml  nodejs-workflow.yml  python-wheel-workflow.yml
cmake/: BundleStaticLibrary.cmake
scripts/: generate-dictionary-bug-fixture.py  relocate-macos-openssl.sh  verify-macos-openssl-rpaths.sh
scripts/antlr4/: Cypher.g4  hash.md5
scripts/pip-package/: setup.py
src/: CMakeLists.txt
src/antlr4/: Cypher.g4  keywords.txt
src/binder/: expression_binder.cpp
src/c_api/: connection.cpp  data_type.cpp  database.cpp  prepared_statement.cpp  query_result.cpp  value.cpp  version.cpp
src/catalog/: catalog.cpp  catalog_set.cpp
src/common/arrow/: CMakeLists.txt  arrow_array_scan.cpp  arrow_schema_metadata.cpp  arrow_schema_metadata_generic_decoder.cpp  arrow_schema_metadata_internal.h  arrow_schema_metadata_snowflake_decoder.cpp  arrow_schema_metadata_utils.cpp  arrow_type.cpp
src/extension/: extension_installer.cpp
src/main/: CMakeLists.txt  client_context.cpp  connection.cpp  database.cpp  database_manager.cpp  prepared_statement.cpp  prepared_statement_metadata_analyzer.cpp
src/optimizer/: count_rel_table_optimizer.cpp  unwind_dedup_optimizer.cpp
src/parser/: transformer.cpp
src/processor/: processor.cpp
src/storage/: checkpointer.cpp  disk_array_collection.cpp  shadow_file.cpp  storage_manager.cpp
src/transaction/: transaction.cpp  transaction_manager.cpp
test/api/: CMakeLists.txt  api_test.cpp  (+7 more)
(+140 files in other folders)
